@@ -3295,6 +3295,75 @@
       <signal name="activate" handler="on_popup_menu_item_denominator_prefixes_activate" last_modification_time="Sun, 21 Mar 2004 21:37:18 GMT"/>
     </widget>
   </child>
+  
+  <child>
+    <widget class="GtkMenuItem" id="separator_result_popup_modes">
+      <property name="visible">True</property>
+    </widget>
+  </child>
+  
+  <child>
+    <widget class="GtkMenuItem" id="result_popup_menu_item_meta_modes">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Modes</property>
+      <property name="use_underline">True</property>
+
+      <child>
+	<widget class="GtkMenu" id="menu_result_popup_meta_modes">
+
+	  <child>
+	    <widget class="GtkMenuItem" id="separator_result_popup_meta_modes">
+	      <property name="visible">True</property>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkImageMenuItem" id="menu_item_result_popup_meta_mode_save">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Save Mode...</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="on_menu_item_meta_mode_save_activate" last_modification_time="Tue, 18 Oct 2005 01:14:23 GMT"/>
+			      
+	      <child internal-child="image">
+		<widget class="GtkImage" id="image_meta_result_popup_mode_save">
+		  <property name="visible">True</property>
+		  <property name="stock">gtk-save</property>
+		  <property name="icon_size">1</property>
+		  <property name="xalign">0.5</property>
+		  <property name="yalign">0.5</property>
+		  <property name="xpad">0</property>
+		  <property name="ypad">0</property>
+		</widget>
+	      </child>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkImageMenuItem" id="menu_item_result_popup_meta_mode_delete">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Delete Mode...</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="on_menu_item_meta_mode_delete_activate" last_modification_time="Tue, 18 Oct 2005 01:14:23 GMT"/>
+			      
+	      <child internal-child="image">
+		<widget class="GtkImage" id="image_result_popup_meta_mode_delete">
+		  <property name="visible">True</property>
+		  <property name="stock">gtk-delete</property>
+		  <property name="icon_size">1</property>
+		  <property name="xalign">0.5</property>
+		  <property name="yalign">0.5</property>
+		  <property name="xpad">0</property>
+		  <property name="ypad">0</property>
+		</widget>
+	      </child>
+	    </widget>
+	  </child>
+
+	</widget>
+      </child>
+    </widget>
+  </child>
+  
 </widget>
 
 <widget class="GtkDialog" id="number_base_dialog">
