@@ -1,8 +1,13 @@
+2005-10-19 Niklas Knutsson  <nq@altern.org>
+
+	* Modes updates
+
 2005-10-18 Niklas Knutsson  <nq@altern.org>
 
 	* Ability to save different modes
 	* Fix as-you-type parsing with " to " in expression
 	* Display as-you-type parsing with warnings in blue
+	* Add mode menu to result popup menu
 
 2005-10-17 Niklas Knutsson  <nq@altern.org>
 
